# safepip-scanner-v1.1

./: README.md  pyproject.toml
safe_pip/: __init__.py  __main__.py  cli.py  scanner.py  watch.py
safe_pip_scanner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_v11.py
