[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "safe-pip-scanner"
version = "1.1.0"
description = "AI-powered Python package security scanner"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28",
    "rich>=13.0",
    "click>=8.0",
    "anthropic>=0.20",
]

[project.scripts]
safe-pip = "safe_pip.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
